--- a/RegexForm.html
+++ b/RegexForm.html
@@ -28,6 +28,7 @@
                     <label><input type="checkbox" name="preferences" value="Technology"> Technology</label>
                     <label><input type="checkbox" name="preferences" value="Health"> Health</label>
                     <label><input type="checkbox" name="preferences" value="Finance"> Finance</label>
+                    <label><input type="checkbox" name="preferences" value="Travel"> Parenting and Family</label>
                     <label><input type="checkbox" name="preferences" value="Science"> Science</label>
                     <label><input type="checkbox" name="preferences" value="Travel"> Travel</label>
                     <label><input type="checkbox" name="preferences" value="Food"> Food</label>
