--- a/RegexForm.html
+++ b/RegexForm.html
@@ -30,6 +30,9 @@
                     <label><input type="checkbox" name="preferences" value="Finance"> Finance</label>
                     <label><input type="checkbox" name="preferences" value="Travel"> Parenting and Family</label>
                     <label><input type="checkbox" name="preferences" value="Science"> Science</label>
+                    <label><input type="checkbox" name="preferences" value="Travel"> Creative Arts</label>
+                    <label><input type="checkbox" name="preferences" value="Travel"> Science and Nature</label>
+                    <label><input type="checkbox" name="preferences" value="Travel"> Sustainability and Environment</label>
                     <label><input type="checkbox" name="preferences" value="Travel"> Travel</label>
                     <label><input type="checkbox" name="preferences" value="Food"> Food</label>
                     <label><input type="checkbox" name="preferences" value="Sports"> Sports</label>
