An Update of the Topics

--- a/RegexForm.html
+++ b/RegexForm.html
@@ -28,11 +28,11 @@
                     <label><input type="checkbox" name="preferences" value="Technology"> Technology</label>
                     <label><input type="checkbox" name="preferences" value="Health"> Health</label>
                     <label><input type="checkbox" name="preferences" value="Finance"> Finance</label>
-                    <label><input type="checkbox" name="preferences" value="Travel"> Parenting and Family</label>
+                    <label><input type="checkbox" name="preferences" value="Parenting and Family"> Parenting and Family</label>
                     <label><input type="checkbox" name="preferences" value="Science"> Science</label>
-                    <label><input type="checkbox" name="preferences" value="Travel"> Creative Arts</label>
-                    <label><input type="checkbox" name="preferences" value="Travel"> Science and Nature</label>
-                    <label><input type="checkbox" name="preferences" value="Travel"> Sustainability and Environment</label>
+                    <label><input type="checkbox" name="preferences" value="Creative Arts"> Creative Arts</label>
+                    <label><input type="checkbox" name="preferences" value="Science and Nature"> Science and Nature</label>
+                    <label><input type="checkbox" name="preferences" value="Sustainability and Environment"> Sustainability and Environment</label>
                     <label><input type="checkbox" name="preferences" value="Travel"> Travel</label>
                     <label><input type="checkbox" name="preferences" value="Food"> Food</label>
                     <label><input type="checkbox" name="preferences" value="Sports"> Sports</label>
