--- a/RegexForm.html
+++ b/RegexForm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 id="form-title">Subscribe to our Newsletter</h1>
+        <h1 id="form-title">Subscribe to Capitol Chronicles</h1>
         <form id="subscription-form" aria-labelledby="form-title">
             <div class="form-group">
                 <label for="first-name">First Name</label>
