--- a/RegexForm.html
+++ b/RegexForm.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Subscribe to our Newsletter</h1>
+        <h1>Subscribe to Capitol Chronicles</h1>
         <form id="subscriptionForm">
             <div class="form-group">
                 <label for="firstName">First Name:</label>
